orchestrator-service/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: orchestrator-service
spec:
  hosts:
    - orchestrator-service
  http:
    - route:
        - destination:
            host: orchestrator-service
            port:
              number: 80
